chapter6/06_01_CreateVPC.json
{
    "Description": "This CloudFormation Template creates a VPC with two pairs of public and private subnets spread across two Availability Zones. It deploys an internet gateway with a default route on the public subnets, and a pair of NAT gateways (one in each AZ) with default routes for them in the private subnets. It also creates the web server and RDS security groups and exports the network resource identifiers for use by later stacks.",
    "AWSTemplateFormatVersion": "2010-09-09",
    "Parameters": {
        "YourPublicIPAddress": {
            "Description": "Please supply your public IP address with a /32 suffix. Type checkip.amazonaws.com in your web browser to view your public IP address. For example, if your public IP address is 1.2.3.4, provide this value:1.2.3.4/32",
            "Type": "String",
            "AllowedPattern": "^(\\d{1,3}\\.){3}\\d{1,3}/\\d{1,2}$",
            "ConstraintDescription": "Must be a valid IP address in CIDR notation, for example 1.2.3.4/32"
        },
        "VpcCIDR": {
            "Description": "Please enter the IP range (CIDR notation) for this VPC",
            "Type": "String",
            "Default": "10.0.0.0/16"
        },
        "FirstPublicSubnetCIDR": {
            "Description": "Please enter the IP range (CIDR notation) for the public subnet in the first Availability Zone",
            "Type": "String",
            "Default": "10.0.1.0/24"
        },
        "SecondPublicSubnetCIDR": {
            "Description": "Please enter the IP range (CIDR notation) for the public subnet in the second Availability Zone",
            "Type": "String",
            "Default": "10.0.2.0/24"
        },
        "FirstPrivateSubnetCIDR": {
            "Description": "Please enter the IP range (CIDR notation) for the private subnet in the first Availability Zone",
            "Type": "String",
            "Default": "10.0.3.0/24"
        },
        "SecondPrivateSubnetCIDR": {
            "Description": "Please enter the IP range (CIDR notation) for the private subnet in the second Availability Zone",
            "Type": "String",
            "Default": "10.0.4.0/24"
        }
    },
    "Metadata" : {
        "AWS::CloudFormation::Interface" : {
          "ParameterGroups" : [
            {
              "Label" : { "default": "VPC Configuration" },
              "Parameters" : [ "YourPublicIPAddress", "VpcCIDR","FirstPublicSubnetCIDR", "SecondPublicSubnetCIDR", "FirstPrivateSubnetCIDR", "SecondPrivateSubnetCIDR" ]
            }
          ],
          "ParameterLabels" : {
            "YourPublicIPAddress" : { "default" : "Your public IP Address"},
            "VpcCIDR" : { "default" : "CIDR of the VPC where the web server will be deployed" }
          }
        }
      },
    "Resources": {
        "VPC": {
            "Type": "AWS::EC2::VPC",
            "Properties": {
                "CidrBlock": {
                    "Ref": "VpcCIDR"
                },
                "EnableDnsSupport": true,
                "EnableDnsHostnames": true,
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "Custom VPC for learning"
                    },
                    {
                        "Key": "Chapter",
                        "Value": "Six"
                    } 
                ]
            }
        },
        "InternetGateway": {
            "Type": "AWS::EC2::InternetGateway",
            "Metadata": {
                "Comment": "The internet gateway allows resources a route out to the internet"
            },
            "Properties": {
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "ChapterSix-IGW"
                    },
                    {
                        "Key": "Chapter",
                        "Value": "Six"
                    }
                ]
            }
        },
        "InternetGatewayAttachment": {
            "Type": "AWS::EC2::VPCGatewayAttachment",
            "Properties": {
                "InternetGatewayId": {
                    "Ref": "InternetGateway"
                },
                "VpcId": {
                    "Ref": "VPC"
                }
            },
            "Metadata": {
                "Comment": "Attaches the internet gateway to the VPC. Note: AWS::EC2::VPCGatewayAttachment does not support tags."
            }
        },
        "FirstPublicSubnet": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "AvailabilityZone": {
                    "Fn::Select": [
                        0,
                        {
                            "Fn::GetAZs": ""
                        }
                    ]
                },
                "CidrBlock": {
                    "Ref": "FirstPublicSubnetCIDR"
                },
                "MapPublicIpOnLaunch": true,
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "Chapter Six Public Subnet in the first AZ"
                    },
                    {
                        "Key": "Chapter",
                        "Value": "Six"
                    }
                ]
            }
        },
        "SecondPublicSubnet": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "AvailabilityZone": {
                    "Fn::Select": [
                        1,
                        {
                            "Fn::GetAZs": ""
                        }
                    ]
                },
                "CidrBlock": {
                    "Ref": "SecondPublicSubnetCIDR"
                },
                "MapPublicIpOnLaunch": true,
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "Chapter Six Public Subnet in the second AZ"
                    },
                    {
                        "Key": "Chapter",
                        "Value": "Six"
                    }
                ]
            }
        },
        "FirstPrivateSubnet": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "AvailabilityZone": {
                    "Fn::Select": [
                        0,
                        {
                            "Fn::GetAZs": ""
                        }
                    ]
                },
                "CidrBlock": {
                    "Ref": "FirstPrivateSubnetCIDR"
                },
                "MapPublicIpOnLaunch": false,
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "Chapter Six Private Subnet in the first AZ"
                    },
                    {
                        "Key": "Chapter",
                        "Value": "Six"
                    }
                ]
            }
        },
        "SecondPrivateSubnet": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "AvailabilityZone": {
                    "Fn::Select": [
                        1,
                        {
                            "Fn::GetAZs": ""
                        }
                    ]
                },
                "CidrBlock": {
                    "Ref": "SecondPrivateSubnetCIDR"
                },
                "MapPublicIpOnLaunch": false,
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "Chapter Six Private Subnet in the second AZ"
                    },
                    {
                        "Key": "Chapter",
                        "Value": "Six"
                    }
                ]
            }
        },
        "FirstNATGatewayEIP": {
            "Type": "AWS::EC2::EIP",
            "DependsOn": "InternetGatewayAttachment",
            "Properties": {
                "Domain": "vpc",
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "Chapter Six NAT Gateway EIP in the first AZ"
                    },
                    {
                        "Key": "Chapter",
                        "Value": "Six"
                    }
                ]
            },
            "Metadata": {
                "Comment": "Allocates an Elastic IP address for the gateway"
            }
        },
        "SecondNATGatewayEIP": {
            "Type": "AWS::EC2::EIP",
            "DependsOn": "InternetGatewayAttachment",
            "Properties": {
                "Domain": "vpc",
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "Chapter Six NAT Gateway EIP in the second AZ"
                    },
                    {
                        "Key": "Chapter",
                        "Value": "Six"
                    }
                ]
            },
            "Metadata": {
                "Comment": "Allocates an Elastic IP address for the gateway"
            }
        },
        "FirstNATGateway": {
            "Type": "AWS::EC2::NatGateway",
            "Properties": {
                "AllocationId": {
                    "Fn::GetAtt": [
                        "FirstNATGatewayEIP",
                        "AllocationId"
                    ]
                },
                "SubnetId": {
                    "Ref": "FirstPublicSubnet"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "NAT Gateway associated with the private subnet in the first AZ"
                    },
                    {
                        "Key": "Chapter",
                        "Value": "Six"
                    }
                ]

            }
        },
        "SecondNATGateway": {
            "Type": "AWS::EC2::NatGateway",
            "Properties": {
                "AllocationId": {
                    "Fn::GetAtt": [
                        "SecondNATGatewayEIP",
                        "AllocationId"
                    ]
                },
                "SubnetId": {
                    "Ref": "SecondPublicSubnet"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "NAT Gateway associated with the private subnet in the second AZ"
                    },
                    {
                        "Key": "Chapter",
                        "Value": "Six"
                    }
                ]
            }
        },
        "PublicRouteTable": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "Chapter Six Public Route Table"
                    },
                    {
                        "Key": "Chapter",
                        "Value": "Six"
                    }
                ]
            }
        },
        "PublicRoute": {
            "Type": "AWS::EC2::Route",
            "DependsOn": "InternetGatewayAttachment",
            "Properties": {
                "RouteTableId": {
                    "Ref": "PublicRouteTable"
                },
                "DestinationCidrBlock": "0.0.0.0/0",
                "GatewayId": {
                    "Ref": "InternetGateway"
                }
            },
            "Metadata": {
                "Comment": "Routes all traffic through the IGW"
            }
        },
        "FirstPublicSubnetRouteTableAssociation": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "RouteTableId": {
                    "Ref": "PublicRouteTable"
                },
                "SubnetId": {
                    "Ref": "FirstPublicSubnet"
                }
            },
            "Metadata": {
                "Comment": "Associates the first public subnet with the public route table"
            }
        },
        "SecondPublicSubnetRouteTableAssociation": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "RouteTableId": {
                    "Ref": "PublicRouteTable"
                },
                "SubnetId": {
                    "Ref": "SecondPublicSubnet"
                }
            },
            "Metadata": {
                "Comment": "Associates the second public subnet with the public route table"
            }
        },
        "FirstPrivateRouteTable": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "Chapter Six First Private Route Table"
                    },
                    {
                        "Key": "Chapter",
                        "Value": "Six"
                    }
                ]
            }
        },
        "FirstPrivateRoute": {
            "Type": "AWS::EC2::Route",
            "Properties": {
                "RouteTableId": {
                    "Ref": "FirstPrivateRouteTable"
                },
                "DestinationCidrBlock": "0.0.0.0/0",
                "NatGatewayId": {
                    "Ref": "FirstNATGateway"
                }
            },
            "Metadata": {
                "Comment": "Routes all traffic through the NAT gateway"
            }
        },
        "FirstPrivateSubnetRouteTableAssociation": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "RouteTableId": {
                    "Ref": "FirstPrivateRouteTable"
                },
                "SubnetId": {
                    "Ref": "FirstPrivateSubnet"
                }
            },
            "Metadata": {
                "Comment": "Associates the private subnet with the private route table"
            }
        },
        "SecondPrivateRouteTable": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "Chapter Six Second Private Route Table"
                    },
                    {
                        "Key": "Chapter",
                        "Value": "Six"
                    }
                ]
            }
        },
        "SecondPrivateRoute": {
            "Type": "AWS::EC2::Route",
            "Properties": {
                "RouteTableId": {
                    "Ref": "SecondPrivateRouteTable"
                },
                "DestinationCidrBlock": "0.0.0.0/0",
                "NatGatewayId": {
                    "Ref": "SecondNATGateway"
                }
            },
            "Metadata": {
                "Comment": "Routes all traffic through the NAT gateway"
            }
        },
        "SecondPrivateSubnetRouteTableAssociation": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "RouteTableId": {
                    "Ref": "SecondPrivateRouteTable"
                },
                "SubnetId": {
                    "Ref": "SecondPrivateSubnet"
                }
            },
            "Metadata": {
                "Comment": "Associates the private subnet with the private route table"
            }
        },
        "WebServerSecurityGroup" : {
            "Type" : "AWS::EC2::SecurityGroup",
            "Properties" : {
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "WebServerSecurityGroup"
                    },
                    {
                        "Key": "Chapter",
                        "Value": "Six"
                    }] ,
                "GroupDescription" : "Allow http to client host",
                "VpcId" : {"Ref" : "VPC"},
                "SecurityGroupIngress" : [{
                    "IpProtocol" : "tcp",
                    "FromPort" : 80,
                    "ToPort" : 80,
                    "CidrIp" : {"Ref" : "YourPublicIPAddress"}
                        }]
                    },
            "Metadata": {
                "Comment": "Allows inbound HTTP traffic from your public IP address"
            }
        },
        "RDSSecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties" : {
                    "Tags": [
                        {
                            "Key": "Name",
                            "Value": "RDSSecurityGroup"
                        },
                        {
                            "Key": "Chapter",
                            "Value": "Six"
                        }],
                "GroupDescription": "Allow web server security group to access database",
                "VpcId": {
                    "Ref": "VPC"
                },
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "tcp",
                        "FromPort": 5432,
                        "ToPort": 5432,
                        "SourceSecurityGroupId": {
                            "Ref": "WebServerSecurityGroup"
                        }
                    }
                ]
            }
        }
    },
    "Outputs": {
        "VPC": {
            "Description": "A reference to the created VPC",
            "Value": {
                "Ref": "VPC"
            },
            "Export": {
                "Name": "BPBBookVPCForLearning"
            }
        },
        "WebServerSecurityGroup": {
            "Description": "A reference to the web server security group",
            "Value": {
                "Ref": "WebServerSecurityGroup"
            },
            "Export": {
                "Name": "BPBBookWebServerSecurityGroup"
            }
        },
        "RDSSecurityGroup": {
            "Description": "A reference to the database security group",
            "Value": {
                "Ref": "RDSSecurityGroup"
            },
            "Export": {
                "Name": "BPBBookRDSSecurityGroup"
            }
        },
        "FirstPublicSubnet": {
            "Description": "A reference to the public subnet in the 1st Availability Zone",
            "Value": {
                "Ref": "FirstPublicSubnet"
            },
            "Export": {
                "Name": "BPBBookVPCFirstPublicSubnet"
            }
        },
        "SecondPublicSubnet": {
            "Description": "A reference to the public subnet in the 2nd Availability Zone",
            "Value": {
                "Ref": "SecondPublicSubnet"
            },
            "Export": {
                "Name": "BPBBookVPCSecondPublicSubnet"
            }
        },
        "FirstPrivateSubnet": {
            "Description": "A reference to the private subnet in the 1st Availability Zone",
            "Value": {
                "Ref": "FirstPrivateSubnet"
            },
            "Export": {
                "Name": "BPBBookVPCFirstPrivateSubnet"
            }
        },
        "SecondPrivateSubnet": {
            "Description": "A reference to the private subnet in the 2nd Availability Zone",
            "Value": {
                "Ref": "SecondPrivateSubnet"
            },
            "Export": {
                "Name": "BPBBookVPCSecondPrivateSubnet"
            }
        }
    }
}
